--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,9 +1,28 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <main>
-            <h1>Nothing there!</h1>
-        </main>
-        <%- include('../includes/end.ejs') %>
+            <main>
+                <% if (orders.length> 0) { %>
+                    <ul class="cart__item-list">
+                        <% orders.forEach(o=> { %>
+                            <li class="cart__item">
+                                <h1>
+                                    <%= o.id %>
+                                </h1>
+                                <ul>
+                                    <% o.products.forEach(product => { %>
+                                        <li> <%= product.title %> (<%= product.orderItem.quantity %>)</li>
+                                    <% }); %>
+                                </ul>
+                            </li>
+                            <% }) %>
+                    </ul>
+                    <hr />
+                    <% } else { %>
+                        <h1>No Products in Cart!</h1>
+                        <% } %>
+            </main>
+            <%- include('../includes/end.ejs') %>
